--- a/portfolio.html
+++ b/portfolio.html
@@ -951,7 +951,7 @@ h2 {
     </p>
     <div class="cta-buttons">
       <a href="contact.html" class="btn btn-primary">Start Your Journey →</a>
-      <a href="login.html" class="btn btn-outline">Explore our work</a>
+      <a href="services.html" class="btn btn-outline">Explore our Services</a>
     </div>
   </div>
 </section>
