--- a/services.html
+++ b/services.html
@@ -613,6 +613,8 @@ nav .socials {
   font-size: 2.5rem;
   font-weight: 700;
   margin-bottom: 15px;
+  justify-content: center;
+  display: flex;
 }
 
 .why-choose-us .intro-text {
@@ -831,13 +833,13 @@ nav .socials {
 </section>
 <section class="cta-section">
   <div class="cta-container">
-    <h2>Ready to Build What’s Next?</h2>
+    <h2>Ready to Bring your Visions into Reality?</h2>
     <p>
-      Let’s create something that sets a new standard.
+      Let's discuss your project and show you how we can deliver premium results for your business.
     </p>
     <div class="cta-buttons">
-      <a href="contact.html" class="btn btn-primary">Start Your Journey →</a>
-      <a href="login.html" class="btn btn-outline">Explore our work</a>
+      <a href="contact.html" class="btn btn-primary">Let's Discuss→</a>
+      <a href="portfolio.html" class="btn btn-outline">View our Work</a>
     </div>
   </div>
 </section>
