--- a/services.html
+++ b/services.html
@@ -533,7 +533,7 @@ nav .socials {
 
 .cta-container {
   max-width: 800px;
-  margin: 0 auto;
+  margin: 30px auto;
 }
 
 .cta-container h2 {
@@ -541,6 +541,7 @@ nav .socials {
   font-size: 3rem;
   font-weight: 700;
   line-height: 1.2;
+  text-transform: uppercase;
 }
 
 .cta-container p {
@@ -615,6 +616,7 @@ nav .socials {
   margin-bottom: 15px;
   justify-content: center;
   display: flex;
+  text-transform: uppercase;
 }
 
 .why-choose-us .intro-text {
