--- a/services.html
+++ b/services.html
@@ -547,6 +547,7 @@ nav .socials {
 .cta-container p {
   font-size: 1.1rem;
   margin-bottom: 40px;
+  color: #ccc;
 }
 
 /* Buttons */
@@ -818,7 +819,7 @@ nav .socials {
       </div>
       <h3>Unmatched Quality</h3>
       <p>
-        Every product we deliver meets enterprise-grade standards — built for performance, reliability, and impact.
+        Every product we deliver meets enterprise-grade standards built for performance, reliability, and impact.
       </p>
     </div>
 
@@ -835,7 +836,7 @@ nav .socials {
 </section>
 <section class="cta-section">
   <div class="cta-container">
-    <h2>Ready to Bring your Visions into Reality?</h2>
+    <h2>Ready to Get Started?</h2>
     <p>
       Let's discuss your project and show you how we can deliver premium results for your business.
     </p>
