--- a/about.html
+++ b/about.html
@@ -271,7 +271,7 @@ footer {
   align-items: center;
   text-decoration: none;
   text-transform: uppercase;
-  display: none;
+  display: none !importan;
 
 }
 .login:hover {
