--- a/contact.html
+++ b/contact.html
@@ -225,7 +225,7 @@ h2 {
   text-decoration: none;
   gap: .5em;
   font-weight: bold;
-  display: none;
+  display: none !important;
   
 }
 .login:hover {
