--- a/faqs.html
+++ b/faqs.html
@@ -392,7 +392,7 @@ span.accordion-title {
     font-weight: bold;
     text-decoration: none;
     text-transform: uppercase;
-    display: none;
+    display: none !important;
 }
 .login:hover {
   color: #8d8d8d !important;
