--- a/portfolio.html
+++ b/portfolio.html
@@ -364,7 +364,7 @@ footer p a {
   gap: .5em;
   font-weight: bold;
   padding-right: 3em;
-  display: none;
+  display: none !important;
 }
 .login:hover {
   color: #8d8d8d !important;
