--- a/services.html
+++ b/services.html
@@ -94,6 +94,7 @@ body {
             list-style: none;
             z-index: 10;
             padding: 0;
+            
         }
         nav ul li {
             margin: 0 5px;
@@ -249,7 +250,7 @@ form {
   align-items: center;
   text-transform: uppercase;
   text-decoration: none;
-  display: none;
+  display: none !important;
 }
 .login:hover {
   color: #8d8d8d !important;
@@ -788,7 +789,7 @@ nav .socials {
 <section class="why-choose-us text-center py-5">
   <h2>Why Choose Danny Agency</h2>
   <p class="intro-text">
-    We deliver excellence through innovation, precision, and partnership — ensuring your success
+    We deliver excellence through innovation, precision, and partnership ensuring your success
     from concept to scale with measurable business impact.
   </p>
 
