--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@ footer {
   text-decoration: none;
   gap: .5em;
   font-weight: bold;
-  display: none;
+  display: none !important;
 }
 .login:hover {
   color: #8d8d8d !important;
