--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 <meta name="twitter:title" content="Danny Agency">
 <meta name="twitter:description" content="Danny Agency offers expert web development services including website design, SEO, marketing, 3D works, and graphic design. Elevate your online presence with our innovative solutions.">
 <meta name="twitter:image" content="logo.png">
+<link rel="icon" type="image/png" href="logo.png">
+
 
     <link rel="shortcut icon" href="logo.png" type="image/png" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
