--- a/portfolio.html
+++ b/portfolio.html
@@ -839,8 +839,12 @@ h2 {
   <!-- HEAT CULTURE -->
   <a href="https://www.heatculture.in/" target="_blank" class="card-link">
     <div class="card" style="--card-color:#1a1a1a;">
-      <img src="https://cdn.shopify.com/s/files/1/0738/3665/9009/files/heat_culture_no_bg_center.png?v=1728842338" alt="heatculture Logo" loading="lazy">
-    
+      <img 
+  src="https://cdn.shopify.com/s/files/1/0738/3665/9009/files/heat_culture_no_bg_center.png?v=1728842338" 
+  alt="heatculture Logo" 
+  loading="lazy"
+  style="filter: invert(1) brightness(2);"
+>
       <span class="tag" style=" background: linear-gradient(46deg, #cccccc, transparent); border: none; color: black"> Clothing brand</span>
       <h3>HEAT CULTURE</h3>   <div class="meta">
         <i class="fa-solid fa-calendar"></i>
@@ -889,8 +893,12 @@ h2 {
   <!-- MAIN CHARACTER INDIA -->
   <a href="https://www.anotherstate.net/" target="_blank" class="card-link">
     <div class="card" style="--card-color: #1a1a1a;">
-      <img src="https://cdn.shopify.com/s/files/1/0945/2411/3199/files/Social-Sharing-Image.webp?v=1759911990" alt="anotherstate" loading="lazy">
-      
+     <img 
+  src="https://cdn.shopify.com/s/files/1/0945/2411/3199/files/Social-Sharing-Image.webp?v=1759911990" 
+  alt="anotherstate" 
+  loading="lazy"
+  style="filter: invert(1) brightness(0.1) sepia(1) saturate(0) hue-rotate(0deg) brightness(1.5) contrast(1.2);"
+>
       <span class="tag"  style=" background: linear-gradient(46deg, #cccccc, transparent); border: none; color: black">Fashion & Lifestyle</span>
       <h3>ANOTHER STATE</h3>  <div class="meta">
         <i class="fa-solid fa-calendar"></i>
