--- a/about.html
+++ b/about.html
@@ -326,7 +326,7 @@ nav .socials {
     padding: 1.2em;
 }
 .hero-section {
-  padding: 30px 10px;
+  padding: 30px 20px !important
 }
 .copyright {
     font-size: 12px;
