--- a/portfolio.html
+++ b/portfolio.html
@@ -893,11 +893,11 @@ h2 {
   <!-- MAIN CHARACTER INDIA -->
   <a href="https://www.anotherstate.net/" target="_blank" class="card-link">
     <div class="card" style="--card-color: #1a1a1a;">
-     <img 
+<img 
   src="https://cdn.shopify.com/s/files/1/0945/2411/3199/files/Social-Sharing-Image.webp?v=1759911990" 
   alt="anotherstate" 
   loading="lazy"
-  style="filter: invert(1) brightness(0.1) sepia(1) saturate(0) hue-rotate(0deg) brightness(1.5) contrast(1.2);"
+  style="filter: invert(1) brightness(0.15) contrast(1.1); background-color:#1a1a1a;"
 >
       <span class="tag"  style=" background: linear-gradient(46deg, #cccccc, transparent); border: none; color: black">Fashion & Lifestyle</span>
       <h3>ANOTHER STATE</h3>  <div class="meta">
