--- a/services.html
+++ b/services.html
@@ -24,6 +24,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
 <link href="/login.css" rel="stylesheet">
+<link rel="stylesheet" href="generalstyling.css">
+
         </head>
         <body>
 <style>
@@ -721,7 +723,7 @@ nav .socials {
   .why-grid {
     grid-template-columns: 1fr;
   }
-  
+
 .cta-container {
     margin: 30px 20px;
 }
