--- a/contact.html
+++ b/contact.html
@@ -27,6 +27,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
   <link href="contact.css" rel="stylesheet">
+  <link rel="stylesheet" href="generalstyling.css">
   <style>
     body {
       overflow-x: hidden;
