--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="index.css" type="text/css" media="all" />
+<link rel="stylesheet" href="generalstyling.css">
         </head>
         <body>
 
