--- a/portfolio.html
+++ b/portfolio.html
@@ -26,6 +26,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
     <link href="portfolio.css" rel="stylesheet">
+    <link rel="stylesheet" href="generalstyling.css">
 </head>
 
 <body>
@@ -897,7 +898,7 @@ h2 {
   src="https://cdn.shopify.com/s/files/1/0945/2411/3199/files/Social-Sharing-Image.webp?v=1759911990" 
   alt="anotherstate" 
   loading="lazy"
-  style="filter: invert(1) brightness(0.15) contrast(1.1); background-color:#1a1a1a;"
+  style="filter: invert(1) brightness(0.9) contrast(0.8); background-color:#1a1a1a;"
 >
       <span class="tag"  style=" background: linear-gradient(46deg, #cccccc, transparent); border: none; color: black">Fashion & Lifestyle</span>
       <h3>ANOTHER STATE</h3>  <div class="meta">
