--- a/index.html
+++ b/index.html
@@ -34,6 +34,46 @@
 <link rel="stylesheet" href="generalstyling.css">
         </head>
         <body>
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "LocalBusiness",
+  "name": "Danny Agency",
+  "image": "https://firebasestorage.googleapis.com/v0/b/octen-29d12.appspot.com/o/presentations%2FUl5d1%2FchatImages%2F1721687289086_my_logo-removebg-preview.png?alt=media&token=33360df2-8425-4642-9867-209bee52f72e",
+  "@id": "https://dannyagency.netlify.app/",
+  "url": "https://dannyagency.netlify.app/",
+  "telephone": "+2348165241774",
+  "address": {
+    "@type": "PostalAddress",
+    "addressLocality": "Lagos",
+    "addressRegion": "LAG",
+    "postalCode": ":100212",
+    "addressCountry": "NG"
+  },
+
+  "openingHoursSpecification": [
+    {
+      "@type": "OpeningHoursSpecification",
+      "dayOfWeek": [
+        "Monday",
+        "Tuesday",
+        "Wednesday",
+        "Thursday",
+        "Friday"
+      ],
+      "opens": "08:00",
+      "closes": "18:00"
+    }
+  ],
+  "sameAs": [
+    "https://www.tiktok.com/dannyagency",
+    "https://www.instagram.com/dannyagency_"
+  ],
+  "description": "Danny Agency offers expert web development services including website design, SEO, marketing, 3D works, and graphic design.",
+  "priceRange": "$500-$5000",
+  "logo": "https://firebasestorage.googleapis.com/v0/b/octen-29d12.appspot.com/o/presentations%2FUl5d1%2FchatImages%2F1721687289086_my_logo-removebg-preview.png?alt=media&token=33360df2-8425-4642-9867-209bee52f72e"
+}
+</script>
 
 <style>
   
