--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <meta property="og:title" content="Danny Agency">
 <meta property="og:description" content="Danny Agency offers expert web development services including website design, SEO, marketing, 3D works, and graphic design. Elevate your online presence with our innovative solutions.">
 <meta property="og:image" content="logo.png">
-<meta property="og:url" content="https://www.danny-agency.com/">
+<meta property="og:url" content="https://dannyagency.netlify.app/">
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="Danny Agency">
 <meta name="twitter:description" content="Danny Agency offers expert web development services including website design, SEO, marketing, 3D works, and graphic design. Elevate your online presence with our innovative solutions.">
