--- a/about.html
+++ b/about.html
@@ -514,7 +514,7 @@ body {
          <div class="socials">
              <a href="https://instagram.com/dannyagency" target="_blank"><i class="bi bi-instagram"></i></a>
             <a href="https://www.tiktok.com/@danny_agency_" target="_blank"><i class="bi bi-tiktok"></i></a>
-              <a href="/" target="_blank"><i class="bi bi-discord"></i></a>
+              <a href="https://discord.com/users/1136152092051001445" target="_blank"><i class="bi bi-discord"></i></a>
         </div>
         </ul>
 </nav>
@@ -541,7 +541,7 @@ body {
               <p>Socials:</p>
               <a href="https://instagram.com/dannyagency" target="_blank"><i class="bi bi-instagram"></i></a>
             <a href="https://www.tiktok.com/@danny_agency_" target="_blank"><i class="bi bi-tiktok"></i></a>
-                <a href="/" target="_blank"><i class="bi bi-discord"></i></a>
+                <a href="https://discord.com/users/1136152092051001445" target="_blank"><i class="bi bi-discord"></i></a>
             </div>
         </div>
         </div>
