--- a/portfolio.html
+++ b/portfolio.html
@@ -827,7 +827,7 @@ h2 {
             <div class="socials">
              <a href="https://instagram.com/dannyagency" target="_blank"><i class="bi bi-instagram"></i></a>
             <a href="https://www.tiktok.com/@danny_agency_" target="_blank"><i class="bi bi-tiktok"></i></a>
-         <a href="/" target="_blank"><i class="bi bi-discord"></i></a>
+         <a href="https://discord.com/users/1136152092051001445" target="_blank"><i class="bi bi-discord"></i></a>
         </div>
         </ul>
     </nav>
@@ -971,7 +971,7 @@ h2 {
         <div class="socials">
             <a href="https://www.instagram.com/dannyagency_" target="_blank"><i class="bi bi-instagram"></i></a>
             <a href="https://www.tiktok.com/@danny_agency_" target="_blank"><i class="bi bi-tiktok"></i></a>
-           <a href="/" target="_blank"><i class="bi bi-discord"></i></a>
+           <a href="https://discord.com/users/1136152092051001445" target="_blank"><i class="bi bi-discord"></i></a>
         </div>
         <a href="#" class="copyright">&copy; 2025 DANNY AGENCY,ALL RIGHTS RESERVED</a>
     </footer>
