--- a/services.html
+++ b/services.html
@@ -758,7 +758,7 @@ nav .socials {
           <div class="socials">
              <a href="https://instagram.com/dannyagency" target="_blank"><i class="bi bi-instagram"></i></a>
             <a href="https://www.tiktok.com/@danny_agency_" target="_blank"><i class="bi bi-tiktok"></i></a>
-             <a href="/" target="_blank"><i class="bi bi-discord"></i></a>
+             <a href="https://discord.com/users/1136152092051001445" target="_blank"><i class="bi bi-discord"></i></a>
         </div>
         </ul>
     </nav>
@@ -856,7 +856,7 @@ nav .socials {
   <div class="socials">
             <a href="https://instagram.com/dannyagency_" target="_blank"><i class="bi bi-instagram"></i></a>
             <a href="https://www.tiktok.com/@danny_agency_" target="_blank"><i class="bi bi-tiktok"></i></a>
-     <a href="/" target="_blank"><i class="bi bi-discord"></i></a>
+     <a href="https://discord.com/users/1136152092051001445" target="_blank"><i class="bi bi-discord"></i></a>
         </div>
   <a href="#" class="copyright">&copy; 2025 DANNY AGENCY,ALL RIGHTS RESERVED</a>
 </footer>
