--- a/faqs.html
+++ b/faqs.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -376,6 +377,7 @@ span.accordion-title {
     font-size: 1rem;
     font-weight: 300;
     margin: 2em 0;
+    color: #8d8d8d;
 }
 
 /* Heading Styles */
