--- a/faqs.html
+++ b/faqs.html
@@ -25,7 +25,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
     <link href="faqs.css" rel="stylesheet">
-    <link rel="stylesheet" href="generalstyling.css">
+<link rel="stylesheet" href="generalstyling.css" type="text/css" media="all" />
 </head>
 <body>
   <style>
