--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="index.css" type="text/css" media="all" />
-<link rel="stylesheet" href="generalstyling.css">
+<link rel="stylesheet" href="generalstyling.css" type="text/css" media="all" />
+
         </head>
         <body>
 <script type="application/ld+json">
