--- a/services.html
+++ b/services.html
@@ -708,7 +708,9 @@ nav .socials {
 .why-card p {
   font-size: 0.95rem;
   color: #ccc;
-  line-height: 1.5;
+  line-height: 1.5; 
+  text-align: left;
+
 }
 
 /* Responsive */
