--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <meta name="twitter:description" content="Danny Agency offers expert web development services including website design, SEO, marketing, 3D works, and graphic design. Elevate your online presence with our innovative solutions.">
 <meta name="twitter:image" content="logo.png">
 <link rel="icon" type="image/png" href="logo.png">
+<link rel="shortcut icon" href="logo.png" type="image/png" />
 
 
     <link rel="shortcut icon" href="logo.png" type="image/png" />
