--- a/portfolio.html
+++ b/portfolio.html
@@ -7,16 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Works - Danny Agency</title>
     <meta name="description" content="Explore the portfolio of Danny Agency showcasing our web development projects, including website design, SEO, marketing, 3D works, and graphic design.">
-<meta name="keywords" content="portfolio, web development projects, website design, SEO, marketing, 3D graphics, graphic design, Danny Agency, Lagos, Nigeria">
+<meta name="keywords" content="portfolio, works, web development projects, website design, SEO, marketing, 3D graphics, graphic design, Danny Agency, Lagos, Nigeria">
     <meta name="robots" content="index, follow, snippet, archive">
 <meta name="author" content="Danny Agency">
-<meta property="og:title" content="Portfolio - Danny Agency">
+<meta property="og:title" content="Works - Danny Agency">
 <meta property="og:description" content="Explore the portfolio of Danny Agency showcasing our web development projects, including website design, SEO, marketing, 3D works, and graphic design.">
 <meta property="og:image" content="logo.png">
 <meta property="og:url" content="https://www.danny-agency.com/portfolio.html">
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="Portfolio - Danny Agency">
-<meta name="twitter:description" content="Explore the portfolio of Danny Agency showcasing our web development projects, including website design, SEO, marketing, 3D works, and graphic design.">
+<meta name="twitter:description" content="Explore the works of Danny Agency showcasing our web development projects, including website design, SEO, marketing, 3D works, and graphic design.">
 <meta name="twitter:image" content="logo.png">
 
     <link rel="shortcut icon" href="logo.png" type="image/png" />
