--- a/services.html
+++ b/services.html
@@ -3,17 +3,13 @@
   <head>
               <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - Danny Agency</title>
-    <meta name="description" content="Login to your Danny Agency account to access personalized web development services, manage projects, and more. Secure and easy access to your account.">
+    <title>Services - Danny Agency</title>
 <meta name="keywords" content="login, user account, web development, Danny Agency, secure login, account management, Lagos, Nigeria">
-      <meta name="robots" content="noindex, nofollow, nosnippet, noarchive">
+      <meta name="robots" content="index, follow, snippet, archive">
 <meta name="author" content="Danny Agency">
 <meta property="og:title" content="Services - Danny Agency">
-<meta property="og:description" content="Login to your Danny Agency account to access personalized web development services, manage projects, and more. Secure and easy access to your account.">
-<meta property="og:image" content="logo.png">
-<meta property="og:url" content="https://www.danny-agency.com/login.html">
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="Login - Danny Agency">
+<meta name="twitter:title" content="Services - Danny Agency">
 <meta name="twitter:description" content="Login to your Danny Agency account to access personalized web development services, manage projects, and more. Secure and easy access to your account.">
 <meta name="twitter:image" content="logo.png">
 
