--- a/index.html
+++ b/index.html
@@ -587,6 +587,7 @@ nav .socials {
             <li><a href="contact.html">Hire us</a></li>
             <li><a href="about.html">About us</a></li>
             <li><a href="faqs.html">FAQs</a></li>
+             <a href="mailto:dannyagency98@gmail.com" class="cta-btn">Talk to Expert</a>
           <br>
            <div class="socials">
              <a href="https://instagram.com/dannyagency" target="_blank"><i class="bi bi-instagram"></i></a>
