--- a/index.html
+++ b/index.html
@@ -574,6 +574,7 @@ nav .socials {
   <nav>
         <img src="https://firebasestorage.googleapis.com/v0/b/octen-29d12.appspot.com/o/presentations%2FUl5d1%2FchatImages%2F1721687289086_my_logo-removebg-preview.png?alt=media&token=33360df2-8425-4642-9867-209bee52f72e" alt="Logo Image" class="logo" style="transform: rotate3d(0, 0, 0, 0deg);">       
         <input type="checkbox" id="click">
+         <img src="https://firebasestorage.googleapis.com/v0/b/octen-29d12.appspot.com/o/presentations%2FUl5d1%2FchatImages%2F1721687289086_my_logo-removebg-preview.png?alt=media&token=33360df2-8425-4642-9867-209bee52f72e" alt="Logo Image" class="logo">
         <label for="click" class="menu-btn">
             <i class="fas fa-bars"></i>
         </label>
@@ -581,12 +582,6 @@ nav .socials {
        
     <a href="login.html" class="login"><i class="fa fa-user-circle"></i>Login</a>
         <ul>
-              <!-- Logo inside menu -->
-    <div class="menu-header">
-      <img src="https://firebasestorage.googleapis.com/v0/b/octen-29d12.appspot.com/o/presentations%2FUl5d1%2FchatImages%2F1721687289086_my_logo-removebg-preview.png?alt=media&token=33360df2-8425-4642-9867-209bee52f72e" alt="Logo Image" class="menu-logo">
-      <label for="click" class="close-btn"><i class="fas fa-times"></i></label>
-    </div>
-          <li><a class="current" href="index.html">Home</a></li>
              <li><a href="services.html">Services</a></li>
             <li><a class="grad-text" href="portfolio.html">Works</a></li>
             <li><a href="contact.html">Hire us</a></li>
