--- a/contact.html
+++ b/contact.html
@@ -580,6 +580,7 @@ nav .socials {
             <li><a class="current" href="contact.html">Hire us</a></li>
             <li><a href="about.html">About us</a></li>
             <li><a href="faqs.html">FAQs</a></li>
+            <a href="mailto:dannyagency98@gmail.com" class="cta-btn">Talk to Expert</a>
            <br>
             <div class="socials">
             <a href="https://instagram.com/dannyagency" target="_blank"><i class="bi bi-instagram"></i></a>
