--- a/index.html
+++ b/index.html
@@ -574,12 +574,14 @@ nav .socials {
   <nav>
         <img src="https://firebasestorage.googleapis.com/v0/b/octen-29d12.appspot.com/o/presentations%2FUl5d1%2FchatImages%2F1721687289086_my_logo-removebg-preview.png?alt=media&token=33360df2-8425-4642-9867-209bee52f72e" alt="Logo Image" class="logo" style="transform: rotate3d(0, 0, 0, 0deg);">       
         <input type="checkbox" id="click">
+        <label for="click" class="menu-btn">
             <i class="fas fa-bars"></i>
         </label>
 
        
     <a href="login.html" class="login"><i class="fa fa-user-circle"></i>Login</a>
         <ul>
+          <li><a class="current" href="index.html">Home</a></li>
              <li><a href="services.html">Services</a></li>
             <li><a class="grad-text" href="portfolio.html">Works</a></li>
             <li><a href="contact.html">Hire us</a></li>
