--- a/about.html
+++ b/about.html
@@ -504,7 +504,12 @@ body {
     </label>
 
     <ul>
-              <img src="https://firebasestorage.googleapis.com/v0/b/octen-29d12.appspot.com/o/presentations%2FUl5d1%2FchatImages%2F1721687289086_my_logo-removebg-preview.png?alt=media&token=33360df2-8425-4642-9867-209bee52f72e" alt="Logo Image" class="logo" style="transform: rotate3d(0, 0, 0, 0deg);">  
+      <img 
+  src="https://firebasestorage.googleapis.com/v0/b/octen-29d12.appspot.com/o/presentations%2FUl5d1%2FchatImages%2F1721687289086_my_logo-removebg-preview.png?alt=media&token=33360df2-8425-4642-9867-209bee52f72e" 
+  alt="Logo Image" 
+  class="logo" 
+  style="transform: rotate3d(0, 0, 0, 0deg);"
+  onload="if(window.innerWidth > 767){ this.style.display='none'; }">
           <li><a class="grad-text" href="index.html">Home</a></li>
            <li><a href="services.html">Services</a></li>
             <li><a class="grad-text" href="portfolio.html">Works</a></li>
