--- a/faqs.html
+++ b/faqs.html
@@ -489,7 +489,7 @@ nav .socials {
   class="logo" 
   style="transform: rotate3d(0, 0, 0, 0deg);"
   onload="if(window.innerWidth > 767){ this.style.display='none'; }">
-
+          <li><a class="grad-text" href="index.html">Home</a></li>
              <li><a href="services.html">Services</a></li>
             <li><a class="grad-text" href="portfolio.html">Works</a></li>
             <li><a href="contact.html">Hire us</a></li>
