--- a/about.html
+++ b/about.html
@@ -707,7 +707,7 @@ window.addEventListener('load', () => {
 <div class="socials">
              <a href="https://instagram.com/dannyagency_" target="_blank"><i class="bi bi-instagram"></i></a>
             <a href="https://www.tiktok.com/@danny_agency_" target="_blank"><i class="bi bi-tiktok"></i></a>
-         <a href="/" target="_blank"><i class="bi bi-discord"></i></a>
+         <a href="https://discord.com/users/1136152092051001445" target="_blank"><i class="bi bi-discord"></i></a>
         </div>
   <a href="#" class="copyright">&copy; 2025 DANNY AGENCY,ALL RIGHTS RESERVED</a>
 </footer>
