--- a/services.html
+++ b/services.html
@@ -212,7 +212,16 @@ footer {
   width: 2em;
 }
 @media (max-width: 40em){
-   
+  .why-choose-us h2 {
+    font-size: 2.2rem;
+  }
+.cta-container p {
+    text-align: left;
+}
+   why-choose-us .intro-text {
+    text-align: left;
+   }
+
     .link-wrap {
         gap: 0;
          justify-content: space-between;
