--- a/portfolio.html
+++ b/portfolio.html
@@ -841,7 +841,7 @@ h2 {
 
   <div class="websites product">
     <h2>Featured Projects</h2>
-    <section>
+<section>
 
      <!-- Works Section -->
   <!-- HEAT CULTURE -->
@@ -898,7 +898,7 @@ h2 {
     </div>
   </a>
 
-  <!-- MAIN CHARACTER INDIA -->
+  <!-- ANOTHER STATE -->
   <a href="https://www.anotherstate.net/" target="_blank" class="card-link">
     <div class="card" style="--card-color: #1a1a1a;">
 <img 
@@ -920,6 +920,60 @@ h2 {
         </a>
       </div>
 
+      <p>An encounter of states conveyed through garments.</p>
+      <div style="display: flex; gap: 10px; flex-wrap: wrap;">
+              <span class="tag">Shopify</span>  <span class="tag">Theme Development</span>
+        </div>
+    </div>
+  </a>
+  <!-- SUPREME BEAUTY -->
+  <a href="https://www.anotherstat/" target="_blank" class="card-link">
+    <div class="card" style="--card-color: #1a1a1a;">
+<img 
+  src="https://www.supremebeauty.com/cdn/shop/files/supreme-logo_340x.png?v=1614368038" 
+  alt="supreme beauty" 
+  loading="lazy"
+  style="filter: invert(1) brightness(0.9) contrast(0.8); background-color:#1a1a1a;"
+>
+      <span class="tag"  style=" background: linear-gradient(46deg, #cccccc, transparent); border: none; color: black">Fashion & Lifestyle</span>
+      <h3>SUPREME BEAUTY</h3>  <div class="meta">
+        <i class="fa-solid fa-calendar"></i>
+        <span class="year">2023</span>
+      </div>
+
+      <div class="link-row">
+        <i class="fa-solid fa-share-square"></i>
+        <a href="https://www.supremebeauty.com/" target="_blank" class="site">
+          superemebeauty.com
+        </a>
+      </div>
+
+      <p>Huge online selection of beauty essentials.</p>
+      <div style="display: flex; gap: 10px; flex-wrap: wrap;">
+              <span class="tag">Shopify</span>  <span class="tag">Theme Development</span> <span class="tag">Speed Optimization</span> <span class="tag">SEO</span>
+        </div>
+    </div>
+  </a>
+  <!-- CHAOS THEORY -->
+  <a href="https://www.peaceinchaos.in/" target="_blank" class="card-link">
+    <div class="card" style="--card-color: #1a1a1a;">
+<img 
+  src="https://cdn.shopify.com/s/files/1/0945/2411/3199/files/Social-Sharing-Image.webp?v=1759911990" 
+  alt="mind at war" 
+  loading="lazy"
+  style="filter: invert(1) brightness(0.9) contrast(0.8); background-color:#1a1a1a;"
+>
+      <span class="tag"  style=" background: linear-gradient(46deg, #cccccc, transparent); border: none; color: black">Fashion & Lifestyle</span>
+      <h3>CHOAS THEORY</h3>  <div class="meta">
+        <i class="fa-solid fa-calendar"></i>
+        <span class="year">2024</span>
+      </div>
+
+      <div class="link-row">
+        <i class="fa-solid fa-share-square"></i>
+        <a href="https://www.peaceinchaos.in/" target="_blank" class="site">
+          peaceinchaos.in
+        </a>
       <p>An encounter of states conveyed through garments.</p>
       <div style="display: flex; gap: 10px; flex-wrap: wrap;">
               <span class="tag">Shopify</span>  <span class="tag">Theme Development</span>
