--- a/portfolio.html
+++ b/portfolio.html
@@ -927,13 +927,12 @@ h2 {
     </div>
   </a>
   <!-- SUPREME BEAUTY -->
-  <a href="https://www.anotherstat/" target="_blank" class="card-link">
+  <a href="https://www.superemebeauty.com/" target="_blank" class="card-link">
     <div class="card" style="--card-color: #1a1a1a;">
 <img 
   src="https://www.supremebeauty.com/cdn/shop/files/supreme-logo_340x.png?v=1614368038" 
   alt="supreme beauty" 
   loading="lazy"
-  style="filter: invert(1) brightness(0.9) contrast(0.8); background-color:#1a1a1a;"
 >
       <span class="tag"  style=" background: linear-gradient(46deg, #cccccc, transparent); border: none; color: black">Fashion & Lifestyle</span>
       <h3>SUPREME BEAUTY</h3>  <div class="meta">
@@ -958,15 +957,15 @@ h2 {
   <a href="https://www.peaceinchaos.in/" target="_blank" class="card-link">
     <div class="card" style="--card-color: #1a1a1a;">
 <img 
-  src="https://cdn.shopify.com/s/files/1/0945/2411/3199/files/Social-Sharing-Image.webp?v=1759911990" 
-  alt="mind at war" 
+  src="https://www.peaceinchaos.in/cdn/shop/files/Final_Logo_copy.png?v=1739768400&width=340" 
+  alt="chaos theory" 
   loading="lazy"
   style="filter: invert(1) brightness(0.9) contrast(0.8); background-color:#1a1a1a;"
 >
       <span class="tag"  style=" background: linear-gradient(46deg, #cccccc, transparent); border: none; color: black">Fashion & Lifestyle</span>
       <h3>CHOAS THEORY</h3>  <div class="meta">
         <i class="fa-solid fa-calendar"></i>
-        <span class="year">2024</span>
+        <span class="year">2025</span>
       </div>
 
       <div class="link-row">
@@ -974,7 +973,7 @@ h2 {
         <a href="https://www.peaceinchaos.in/" target="_blank" class="site">
           peaceinchaos.in
         </a>
-      <p>An encounter of states conveyed through garments.</p>
+      <p>The Butterfly Effect reminding you that even the smallest actions can cause ripples of impact across the world.</p>
       <div style="display: flex; gap: 10px; flex-wrap: wrap;">
               <span class="tag">Shopify</span>  <span class="tag">Theme Development</span>
         </div>
