--- a/portfolio.html
+++ b/portfolio.html
@@ -1011,6 +1011,24 @@ h2 {
       </div>
     </div>
   </div>
+  <div 
+  style="
+    background-color: #1a1a1a;
+    border: 1px solid white;
+    color: white;
+    width: 300px;
+    height: 400px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: Arial, sans-serif;
+    font-size: 20px;
+    border-radius: 10px;
+    margin: 20px auto;
+  ">
+  + 6 more projects
+</div>
+
 </section>
 
 <section class="cta-section">
