--- a/portfolio.html
+++ b/portfolio.html
@@ -1011,23 +1011,39 @@ h2 {
       </div>
     </div>
   </div>
-  <div 
+<div class="plus"
   style="
+    flex: 1 1 calc(23.333% - 2em);
+    border-radius: 1em;
+    padding: 1.5em;
+    width: 320px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.05);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    border: 1px solid #ccc;
     background-color: #1a1a1a;
-    border: 1px solid white;
     color: white;
-    width: 300px;
     height: 400px;
     display: flex;
     align-items: center;
     justify-content: center;
-    font-family: Arial, sans-serif;
+    font-family: inherit;
     font-size: 20px;
-    border-radius: 10px;
-    margin: 20px auto;
   ">
   + 6 more projects
 </div>
+
+<style>
+  .plus:hover {
+    transform: translateY(-5px);
+    box-shadow: 
+      0 0 8px 2px rgba(200, 200, 200, 0.4), 
+      0 0 15px 8px rgba(200, 200, 200, 0.2);
+  }
+</style>
+
 
 </section>
 
