--- a/portfolio.html
+++ b/portfolio.html
@@ -973,6 +973,7 @@ h2 {
         <a href="https://www.peaceinchaos.in/" target="_blank" class="site">
           peaceinchaos.in
         </a>
+        </div>
       <p>The Butterfly Effect reminding you that even the smallest actions can cause ripples of impact across the world.</p>
       <div style="display: flex; gap: 10px; flex-wrap: wrap;">
               <span class="tag">Shopify</span>  <span class="tag">Theme Development</span>
