--- a/portfolio.html
+++ b/portfolio.html
@@ -853,7 +853,7 @@ h2 {
   loading="lazy"
   style="filter: invert(1) brightness(2);"
 >
-      <span class="tag" style=" background: linear-gradient(46deg, #cccccc, transparent); border: none; color: black"> Clothing brand</span>
+      <span class="tag" style=" background: linear-gradient(46deg, #cccccc, transparent); border: none; color: black">Fashion & Lifestyle</span>
       <h3>HEAT CULTURE</h3>   <div class="meta">
         <i class="fa-solid fa-calendar"></i>
         <span class="year">2024</span>
@@ -934,7 +934,7 @@ h2 {
   alt="supreme beauty" 
   loading="lazy"
 >
-      <span class="tag"  style=" background: linear-gradient(46deg, #cccccc, transparent); border: none; color: black">Fashion & Lifestyle</span>
+      <span class="tag"  style=" background: linear-gradient(46deg, #cccccc, transparent); border: none; color: black">Hair & Beauty</span>
       <h3>SUPREME BEAUTY</h3>  <div class="meta">
         <i class="fa-solid fa-calendar"></i>
         <span class="year">2023</span>
@@ -957,10 +957,10 @@ h2 {
   <a href="https://www.peaceinchaos.in/" target="_blank" class="card-link">
     <div class="card" style="--card-color: #1a1a1a;">
 <img 
-  src="https://www.peaceinchaos.in/cdn/shop/files/Final_Logo_copy.png?v=1739768400&width=340" 
+  src="https://www.peaceinchaos.in/cdn/shop/files/Final_Logo_copy.png?v=1739768400" 
   alt="chaos theory" 
   loading="lazy"
-  style="filter: invert(1) brightness(0.9) contrast(0.8); background-color:#1a1a1a;"
+  style="height: 150px; width: 340px;"
 >
       <span class="tag"  style=" background: linear-gradient(46deg, #cccccc, transparent); border: none; color: black">Fashion & Lifestyle</span>
       <h3>CHOAS THEORY</h3>  <div class="meta">
