--- a/portfolio.html
+++ b/portfolio.html
@@ -45,6 +45,9 @@
   h2{
     font-size:48px !important;
   }
+  .plus {    
+    height: 500px;
+  }
  }
 body, html {
     margin: 0;
@@ -960,7 +963,7 @@ h2 {
   src="https://www.peaceinchaos.in/cdn/shop/files/Final_Logo_copy.png?v=1739768400" 
   alt="chaos theory" 
   loading="lazy"
-  style="height: 150px; width: 340px;"
+  style="height: 150px;"
 >
       <span class="tag"  style=" background: linear-gradient(46deg, #cccccc, transparent); border: none; color: black">Fashion & Lifestyle</span>
       <h3>CHOAS THEORY</h3>  <div class="meta">
@@ -994,7 +997,7 @@ h2 {
     border: 1px solid #ccc;
     background-color: #1a1a1a;
     color: white;
-    height: 400px;
+    height: auto;
     display: flex;
     align-items: center;
     justify-content: center;
