--- a/portfolio.html
+++ b/portfolio.html
@@ -846,33 +846,34 @@ h2 {
     <h2>Featured Projects</h2>
 <section>
 
-     <!-- Works Section -->
   <!-- HEAT CULTURE -->
   <a href="https://www.heatculture.in/" target="_blank" class="card-link">
     <div class="card" style="--card-color:#1a1a1a;">
       <img 
-  src="https://cdn.shopify.com/s/files/1/0738/3665/9009/files/heat_culture_no_bg_center.png?v=1728842338" 
-  alt="heatculture Logo" 
-  loading="lazy"
-  style="filter: invert(1) brightness(2);"
->
-      <span class="tag" style=" background: linear-gradient(46deg, #cccccc, transparent); border: none; color: black">Fashion & Lifestyle</span>
-      <h3>HEAT CULTURE</h3>   <div class="meta">
-        <i class="fa-solid fa-calendar"></i>
-        <span class="year">2024</span>
+        src="https://cdn.shopify.com/s/files/1/0738/3665/9009/files/heat_culture_no_bg_center.png?v=1728842338" 
+        alt="heatculture Logo" 
+        loading="lazy"
+        style="filter: invert(1) brightness(2);"
+      >
+      <span class="tag" style="background: linear-gradient(46deg, #cccccc, transparent); border: none; color: black">
+        Fashion & Lifestyle
+      </span>
+      <h3>HEAT CULTURE</h3>
+      <div class="meta">
+        <i class="fa-solid fa-calendar"></i><span class="year">2024</span>
       </div>
 
       <div class="link-row">
         <i class="fa-solid fa-share-square"></i>
-        <a href="https://www.heatculture.in/" target="_blank" class="site">
-          heatculture.in
-        </a>
+        <a href="https://www.heatculture.in/" target="_blank" class="site">heatculture.in</a>
       </div>
 
       <p>Heat Culture redefine premium streetwear with bold designs and quality craftsmanship.</p>
       <div style="display: flex; gap: 10px; flex-wrap: wrap;">
-        <span class="tag">Shopify</span>  <span class="tag">Theme Development</span>   <span class="tag">SEO</span>
-        </div>
+        <span class="tag">Shopify</span>
+        <span class="tag">Theme Development</span>
+        <span class="tag">SEO</span>
+      </div>
     </div>
   </a>
 
@@ -880,142 +881,159 @@ h2 {
   <a href="https://www.saharanrockin.com/" target="_blank" class="card-link">
     <div class="card" style="--card-color:#1a1a1a;">
       <img src="https://cdn.shopify.com/s/files/1/0665/5849/2822/files/IMG_9171.png?v=1757995982" alt="Saharan rockin" loading="lazy">
-   
-      <span class="tag"  style=" background: linear-gradient(46deg, #cccccc, transparent); border: none; color: black">Comic series</span>
-      <h3>SAHARAN ROCKIN</h3>    <div class="meta">
-        <i class="fa-solid fa-calendar"></i>
-        <span class="year">2025</span>
+      <span class="tag" style="background: linear-gradient(46deg, #cccccc, transparent); border: none; color: black">
+        Comic series
+      </span>
+      <h3>SAHARAN ROCKIN</h3>
+      <div class="meta">
+        <i class="fa-solid fa-calendar"></i><span class="year">2025</span>
       </div>
 
       <div class="link-row">
         <i class="fa-solid fa-share-square"></i>
-        <a href="https://www.saharanrockin.com/" target="_blank" class="site">
-          saharanrockin.com
-        </a>
+        <a href="https://www.saharanrockin.com/" target="_blank" class="site">saharanrockin.com</a>
       </div>
 
       <p>A surreal Y2K-inspired manga series by Saharan Rockin Studios.</p>
       <div style="display: flex; gap: 10px; flex-wrap: wrap;">
-         <span class="tag">Shopify</span>  <span class="tag">Theme Development</span>   <span class="tag">SEO</span>
-        </div>
+        <span class="tag">Shopify</span>
+        <span class="tag">Theme Development</span>
+        <span class="tag">SEO</span>
+      </div>
     </div>
   </a>
 
-  <!-- ANOTHER STATE -->
-  <a href="https://www.anotherstate.net/" target="_blank" class="card-link">
+  <!-- ANOTHER STATE (hidden on mobile) -->
+  <a href="https://www.anotherstate.net/" target="_blank" class="card-link hide-mobile">
     <div class="card" style="--card-color: #1a1a1a;">
-<img 
-  src="https://cdn.shopify.com/s/files/1/0945/2411/3199/files/Social-Sharing-Image.webp?v=1759911990" 
-  alt="anotherstate" 
-  loading="lazy"
-  style="filter: invert(1) brightness(0.9) contrast(0.8); background-color:#1a1a1a;"
->
-      <span class="tag"  style=" background: linear-gradient(46deg, #cccccc, transparent); border: none; color: black">Fashion & Lifestyle</span>
-      <h3>ANOTHER STATE</h3>  <div class="meta">
-        <i class="fa-solid fa-calendar"></i>
-        <span class="year">2024</span>
+      <img 
+        src="https://cdn.shopify.com/s/files/1/0945/2411/3199/files/Social-Sharing-Image.webp?v=1759911990" 
+        alt="anotherstate" 
+        loading="lazy"
+        style="filter: invert(1) brightness(0.9) contrast(0.8); background-color:#1a1a1a;"
+      >
+      <span class="tag" style="background: linear-gradient(46deg, #cccccc, transparent); border: none; color: black">
+        Fashion & Lifestyle
+      </span>
+      <h3>ANOTHER STATE</h3>
+      <div class="meta">
+        <i class="fa-solid fa-calendar"></i><span class="year">2024</span>
       </div>
 
       <div class="link-row">
         <i class="fa-solid fa-share-square"></i>
-        <a href="https://www.anotherstate.net/" target="_blank" class="site">
-          anotherstate.net
-        </a>
+        <a href="https://www.anotherstate.net/" target="_blank" class="site">anotherstate.net</a>
       </div>
 
       <p>An encounter of states conveyed through garments.</p>
       <div style="display: flex; gap: 10px; flex-wrap: wrap;">
-              <span class="tag">Shopify</span>  <span class="tag">Theme Development</span>
-        </div>
+        <span class="tag">Shopify</span>
+        <span class="tag">Theme Development</span>
+      </div>
     </div>
   </a>
-  <!-- SUPREME BEAUTY -->
-  <a href="https://www.superemebeauty.com/" target="_blank" class="card-link">
+
+  <!-- SUPREME BEAUTY (hidden on mobile) -->
+  <a href="https://www.superemebeauty.com/" target="_blank" class="card-link hide-mobile">
     <div class="card" style="--card-color: #1a1a1a;">
-<img 
-  src="https://www.supremebeauty.com/cdn/shop/files/supreme-logo_340x.png?v=1614368038" 
-  alt="supreme beauty" 
-  loading="lazy"
->
-      <span class="tag"  style=" background: linear-gradient(46deg, #cccccc, transparent); border: none; color: black">Hair & Beauty</span>
-      <h3>SUPREME BEAUTY</h3>  <div class="meta">
-        <i class="fa-solid fa-calendar"></i>
-        <span class="year">2023</span>
+      <img 
+        src="https://www.supremebeauty.com/cdn/shop/files/supreme-logo_340x.png?v=1614368038" 
+        alt="supreme beauty" 
+        loading="lazy"
+      >
+      <span class="tag" style="background: linear-gradient(46deg, #cccccc, transparent); border: none; color: black">
+        Hair & Beauty
+      </span>
+      <h3>SUPREME BEAUTY</h3>
+      <div class="meta">
+        <i class="fa-solid fa-calendar"></i><span class="year">2023</span>
       </div>
 
       <div class="link-row">
         <i class="fa-solid fa-share-square"></i>
-        <a href="https://www.supremebeauty.com/" target="_blank" class="site">
-          superemebeauty.com
-        </a>
+        <a href="https://www.supremebeauty.com/" target="_blank" class="site">superemebeauty.com</a>
       </div>
 
       <p>Huge online selection of beauty essentials.</p>
       <div style="display: flex; gap: 10px; flex-wrap: wrap;">
-              <span class="tag">Shopify</span>  <span class="tag">Theme Development</span> <span class="tag">Speed Optimization</span> <span class="tag">SEO</span>
-        </div>
+        <span class="tag">Shopify</span>
+        <span class="tag">Theme Development</span>
+        <span class="tag">Speed Optimization</span>
+        <span class="tag">SEO</span>
+      </div>
     </div>
   </a>
+
   <!-- CHAOS THEORY -->
   <a href="https://www.peaceinchaos.in/" target="_blank" class="card-link">
     <div class="card" style="--card-color: #1a1a1a;">
-<img 
-  src="https://www.peaceinchaos.in/cdn/shop/files/Final_Logo_copy.png?v=1739768400" 
-  alt="chaos theory" 
-  loading="lazy"
-  style="height: 150px;"
->
-      <span class="tag"  style=" background: linear-gradient(46deg, #cccccc, transparent); border: none; color: black">Fashion & Lifestyle</span>
-      <h3>CHOAS THEORY</h3>  <div class="meta">
-        <i class="fa-solid fa-calendar"></i>
-        <span class="year">2025</span>
+      <img 
+        src="https://www.peaceinchaos.in/cdn/shop/files/Final_Logo_copy.png?v=1739768400" 
+        alt="chaos theory" 
+        loading="lazy"
+        style="height: 150px;"
+      >
+      <span class="tag" style="background: linear-gradient(46deg, #cccccc, transparent); border: none; color: black">
+        Fashion & Lifestyle
+      </span>
+      <h3>CHAOS THEORY</h3>
+      <div class="meta">
+        <i class="fa-solid fa-calendar"></i><span class="year">2025</span>
       </div>
 
       <div class="link-row">
         <i class="fa-solid fa-share-square"></i>
-        <a href="https://www.peaceinchaos.in/" target="_blank" class="site">
-          peaceinchaos.in
-        </a>
-        </div>
+        <a href="https://www.peaceinchaos.in/" target="_blank" class="site">peaceinchaos.in</a>
+      </div>
+
       <p>The Butterfly Effect reminding you that even the smallest actions can cause ripples of impact across the world.</p>
       <div style="display: flex; gap: 10px; flex-wrap: wrap;">
-              <span class="tag">Shopify</span>  <span class="tag">Theme Development</span>
-        </div>
+        <span class="tag">Shopify</span>
+        <span class="tag">Theme Development</span>
+      </div>
     </div>
   </a>
-  <div class="plus"
-  style="
-    flex: 1 1 calc(23.333% - 2em);
-    border-radius: 1em;
-    padding: 1.5em;
-    width: 320px;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    box-shadow: 0 4px 10px rgba(0,0,0,0.05);
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-    border: 1px solid #ccc;
-    background-color: #1a1a1a;
-    color: white;
-    height: auto;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-family: inherit;
-    font-size: 20px;
-  ">
-  + 6 more projects
-</div>
 
-<style>
-  .plus:hover {
-    transform: translateY(-5px);
-    box-shadow: 
-      0 0 8px 2px rgba(200, 200, 200, 0.4), 
-      0 0 15px 8px rgba(200, 200, 200, 0.2);
-  }
-</style>
+  <!-- +6 MORE PROJECTS -->
+  <div class="plus"
+    style="
+      flex: 1 1 calc(23.333% - 2em);
+      border-radius: 1em;
+      padding: 1.5em;
+      width: 320px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.05);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      border: 1px solid #ccc;
+      background-color: #1a1a1a;
+      color: white;
+      height: 100%;
+      font-family: inherit;
+      font-size: 20px;
+    ">
+    + 6 more projects
+  </div>
+
+  <style>
+    .plus:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 0 8px 2px rgba(200, 200, 200, 0.4),
+                  0 0 15px 8px rgba(200, 200, 200, 0.2);
+    }
+
+    /* Hide specific cards on mobile */
+    @media (max-width: 768px) {
+      .hide-mobile {
+        display: none !important;
+      }
+    }
+  </style>
+
 </section>
+
+
 <section class="impact-section">
   <div class="container">
     <h2>VISIONS INTO REALITY</h2>
