--- a/portfolio.html
+++ b/portfolio.html
@@ -855,23 +855,20 @@ h2 {
         loading="lazy"
         style="filter: invert(1) brightness(2);"
       >
-      <span class="tag" style="background: linear-gradient(46deg, #cccccc, transparent); border: none; color: black">
-        Fashion & Lifestyle
-      </span>
-      <h3>HEAT CULTURE</h3>
+      <span class="tag" style="background: linear-gradient(46deg, #cccccc, transparent); border: none; color: black">Fashion & Lifestyle</span>
+      <h3>HEAT CULTURE</h3>   
       <div class="meta">
-        <i class="fa-solid fa-calendar"></i><span class="year">2024</span>
+        <i class="fa-solid fa-calendar"></i>
+        <span class="year">2024</span>
       </div>
-
       <div class="link-row">
         <i class="fa-solid fa-share-square"></i>
         <a href="https://www.heatculture.in/" target="_blank" class="site">heatculture.in</a>
       </div>
-
       <p>Heat Culture redefine premium streetwear with bold designs and quality craftsmanship.</p>
       <div style="display: flex; gap: 10px; flex-wrap: wrap;">
-        <span class="tag">Shopify</span>
-        <span class="tag">Theme Development</span>
+        <span class="tag">Shopify</span>  
+        <span class="tag">Theme Development</span>   
         <span class="tag">SEO</span>
       </div>
     </div>
@@ -881,29 +878,26 @@ h2 {
   <a href="https://www.saharanrockin.com/" target="_blank" class="card-link">
     <div class="card" style="--card-color:#1a1a1a;">
       <img src="https://cdn.shopify.com/s/files/1/0665/5849/2822/files/IMG_9171.png?v=1757995982" alt="Saharan rockin" loading="lazy">
-      <span class="tag" style="background: linear-gradient(46deg, #cccccc, transparent); border: none; color: black">
-        Comic series
-      </span>
-      <h3>SAHARAN ROCKIN</h3>
+      <span class="tag" style="background: linear-gradient(46deg, #cccccc, transparent); border: none; color: black">Comic series</span>
+      <h3>SAHARAN ROCKIN</h3>    
       <div class="meta">
-        <i class="fa-solid fa-calendar"></i><span class="year">2025</span>
+        <i class="fa-solid fa-calendar"></i>
+        <span class="year">2025</span>
       </div>
-
       <div class="link-row">
         <i class="fa-solid fa-share-square"></i>
         <a href="https://www.saharanrockin.com/" target="_blank" class="site">saharanrockin.com</a>
       </div>
-
       <p>A surreal Y2K-inspired manga series by Saharan Rockin Studios.</p>
       <div style="display: flex; gap: 10px; flex-wrap: wrap;">
-        <span class="tag">Shopify</span>
-        <span class="tag">Theme Development</span>
+        <span class="tag">Shopify</span>  
+        <span class="tag">Theme Development</span>   
         <span class="tag">SEO</span>
       </div>
     </div>
   </a>
 
-  <!-- ANOTHER STATE (hidden on mobile) -->
+  <!-- ANOTHER STATE -->
   <a href="https://www.anotherstate.net/" target="_blank" class="card-link hide-mobile">
     <div class="card" style="--card-color: #1a1a1a;">
       <img 
@@ -912,28 +906,25 @@ h2 {
         loading="lazy"
         style="filter: invert(1) brightness(0.9) contrast(0.8); background-color:#1a1a1a;"
       >
-      <span class="tag" style="background: linear-gradient(46deg, #cccccc, transparent); border: none; color: black">
-        Fashion & Lifestyle
-      </span>
-      <h3>ANOTHER STATE</h3>
+      <span class="tag" style="background: linear-gradient(46deg, #cccccc, transparent); border: none; color: black">Fashion & Lifestyle</span>
+      <h3>ANOTHER STATE</h3>  
       <div class="meta">
-        <i class="fa-solid fa-calendar"></i><span class="year">2024</span>
+        <i class="fa-solid fa-calendar"></i>
+        <span class="year">2024</span>
       </div>
-
       <div class="link-row">
         <i class="fa-solid fa-share-square"></i>
         <a href="https://www.anotherstate.net/" target="_blank" class="site">anotherstate.net</a>
       </div>
-
       <p>An encounter of states conveyed through garments.</p>
       <div style="display: flex; gap: 10px; flex-wrap: wrap;">
-        <span class="tag">Shopify</span>
+        <span class="tag">Shopify</span>  
         <span class="tag">Theme Development</span>
       </div>
     </div>
   </a>
 
-  <!-- SUPREME BEAUTY (hidden on mobile) -->
+  <!-- SUPREME BEAUTY -->
   <a href="https://www.superemebeauty.com/" target="_blank" class="card-link hide-mobile">
     <div class="card" style="--card-color: #1a1a1a;">
       <img 
@@ -941,24 +932,21 @@ h2 {
         alt="supreme beauty" 
         loading="lazy"
       >
-      <span class="tag" style="background: linear-gradient(46deg, #cccccc, transparent); border: none; color: black">
-        Hair & Beauty
-      </span>
-      <h3>SUPREME BEAUTY</h3>
+      <span class="tag" style="background: linear-gradient(46deg, #cccccc, transparent); border: none; color: black">Hair & Beauty</span>
+      <h3>SUPREME BEAUTY</h3>  
       <div class="meta">
-        <i class="fa-solid fa-calendar"></i><span class="year">2023</span>
+        <i class="fa-solid fa-calendar"></i>
+        <span class="year">2023</span>
       </div>
-
       <div class="link-row">
         <i class="fa-solid fa-share-square"></i>
         <a href="https://www.supremebeauty.com/" target="_blank" class="site">superemebeauty.com</a>
       </div>
-
       <p>Huge online selection of beauty essentials.</p>
       <div style="display: flex; gap: 10px; flex-wrap: wrap;">
-        <span class="tag">Shopify</span>
-        <span class="tag">Theme Development</span>
-        <span class="tag">Speed Optimization</span>
+        <span class="tag">Shopify</span>  
+        <span class="tag">Theme Development</span> 
+        <span class="tag">Speed Optimization</span> 
         <span class="tag">SEO</span>
       </div>
     </div>
@@ -973,65 +961,74 @@ h2 {
         loading="lazy"
         style="height: 150px;"
       >
-      <span class="tag" style="background: linear-gradient(46deg, #cccccc, transparent); border: none; color: black">
-        Fashion & Lifestyle
-      </span>
-      <h3>CHAOS THEORY</h3>
+      <span class="tag" style="background: linear-gradient(46deg, #cccccc, transparent); border: none; color: black">Fashion & Lifestyle</span>
+      <h3>CHAOS THEORY</h3>  
       <div class="meta">
-        <i class="fa-solid fa-calendar"></i><span class="year">2025</span>
+        <i class="fa-solid fa-calendar"></i>
+        <span class="year">2025</span>
       </div>
-
       <div class="link-row">
         <i class="fa-solid fa-share-square"></i>
         <a href="https://www.peaceinchaos.in/" target="_blank" class="site">peaceinchaos.in</a>
       </div>
-
       <p>The Butterfly Effect reminding you that even the smallest actions can cause ripples of impact across the world.</p>
       <div style="display: flex; gap: 10px; flex-wrap: wrap;">
-        <span class="tag">Shopify</span>
+        <span class="tag">Shopify</span>  
         <span class="tag">Theme Development</span>
       </div>
     </div>
   </a>
 
   <!-- +6 MORE PROJECTS -->
-  <div class="plus"
-    style="
-      flex: 1 1 calc(23.333% - 2em);
-      border-radius: 1em;
-      padding: 1.5em;
-      width: 320px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.05);
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-      border: 1px solid #ccc;
-      background-color: #1a1a1a;
-      color: white;
-      height: 100%;
-      font-family: inherit;
-      font-size: 20px;
-    ">
+  <div class="plus">
     + 6 more projects
   </div>
 
-  <style>
-    .plus:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 0 8px 2px rgba(200, 200, 200, 0.4),
-                  0 0 15px 8px rgba(200, 200, 200, 0.2);
-    }
-
-    /* Hide specific cards on mobile */
-    @media (max-width: 768px) {
-      .hide-mobile {
-        display: none !important;
-      }
-    }
-  </style>
-
 </section>
+
+<style>
+  .plus {
+    flex: 1 1 calc(23.333% - 2em);
+    border-radius: 1em;
+    padding: 1.5em;
+    width: 320px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #1a1a1a;
+    color: white;
+    font-family: inherit;
+    font-size: 20px;
+    border: 1px solid #ccc;
+    height: 400px; /* 🔥 Match other cards */
+    box-shadow: 0 4px 10px rgba(0,0,0,0.05);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+  }
+
+  .plus:hover {
+    transform: translateY(-5px);
+    box-shadow: 
+      0 0 8px 2px rgba(200, 200, 200, 0.4), 
+      0 0 15px 8px rgba(200, 200, 200, 0.2);
+  }
+
+  @media (max-width: 768px) {
+    .card {
+      flex: 1 1 calc(100% - 2em);
+      height: auto;
+    }
+
+    .plus {
+      height: auto; /* make it fluid on mobile */
+      width: 100%;
+    }
+
+    .hide-mobile {
+      display: none !important; /* completely hide full cards */
+    }
+  }
+</style>
+
 
 
 <section class="impact-section">
