--- a/portfolio.html
+++ b/portfolio.html
@@ -955,7 +955,7 @@ h2 {
 
   <!-- CHAOS THEORY -->
   <a href="https://www.peaceinchaos.in/" target="_blank" class="card-link">
-    <div class="card" style="--card-color:#1a1a1a;">
+    <div class="card" style="--card-color:#1a1a1a; display:none;">
       <img src="https://www.peaceinchaos.in/cdn/shop/files/Final_Logo_copy.png?v=1739768400"
            alt="chaos theory" loading="lazy" style="height: 150px;">
       <span class="tag" style="background: linear-gradient(46deg, #cccccc, transparent); border: none; color: black">
@@ -980,7 +980,7 @@ h2 {
 
   <div class="plus"
        style="flex: 1 1 calc(23.333% - 2em); border-radius: 1em; padding: 1.5em; width: 320px; display: flex; flex-direction: column; align-items: flex-start; box-shadow: 0 4px 10px rgba(0,0,0,0.05); transition: transform 0.3s ease, box-shadow 0.3s ease; border: 1px solid #ccc; background-color: #1a1a1a; color: white; height: auto; display: flex; align-items: center; justify-content: center; font-family: inherit; font-size: 20px;">
-    + 6 more projects
+    + 10 more projects
   </div>
 
   <style>
