--- a/portfolio.html
+++ b/portfolio.html
@@ -843,7 +843,7 @@ h2 {
     </nav>
 
   <div class="websites product">
-    <h2>Featured Projects</h2>
+    <h2>Projects Highlights</h2>
     <section>
   <!-- Works Section -->
 
