--- a/portfolio.html
+++ b/portfolio.html
@@ -201,6 +201,7 @@ body {
   }
     .plus {    
     height: 500px!important;
+    flex:100%
   }
 }
 
@@ -927,7 +928,7 @@ h2 {
   </a>
 
   <!-- SUPREME BEAUTY -->
-  <a href="https://www.superemebeauty.com/" target="_blank" class="card-link">
+  <a href="https://www.supremebeauty.com/" target="_blank" class="card-link">
     <div class="card" style="--card-color:#1a1a1a;">
       <img src="https://www.supremebeauty.com/cdn/shop/files/supreme-logo_340x.png?v=1614368038"
            alt="supreme beauty" loading="lazy">
@@ -941,7 +942,7 @@ h2 {
       </div>
       <div class="link-row">
         <i class="fa-solid fa-share-square"></i>
-        <a href="https://www.supremebeauty.com/" target="_blank" class="site">superemebeauty.com</a>
+        <a href="https://www.supremebeauty.com/" target="_blank" class="site">supremebeauty.com</a>
       </div>
       <p>Huge online selection of beauty essentials.</p>
       <div style="display: flex; gap: 10px; flex-wrap: wrap;">
@@ -978,10 +979,34 @@ h2 {
     </div>
   </a>
 
+<a href="mailto:dannyagency98@gmail.com
+?subject=Request%20for%20Project%20Portfolio
+&body=Hello,%0D%0A%0D%0AI%20hope%20this%20message%20finds%20you%20well.%0D%0A%0D%0AI%20am%20interested%20in%20reviewing%20more%20of%20your%20work%20and%20would%20like%20to%20request%20access%20to%20your%20full%20project%20portfolio.%20Please%20let%20me%20know%20how%20I%20can%20view%20your%20recent%20or%20relevant%20projects.%0D%0A%0D%0AThank%20you%20for%20your%20time,%20and%20I%20look%20forward%20to%20your%20response.%0D%0A%0D%0ABest%20regards,"
+   style="text-decoration: none; color: inherit;">
+
   <div class="plus"
-       style="flex: 1 1 calc(23.333% - 2em); border-radius: 1em; padding: 1.5em; width: 320px; display: flex; flex-direction: column; align-items: flex-start; box-shadow: 0 4px 10px rgba(0,0,0,0.05); transition: transform 0.3s ease, box-shadow 0.3s ease; border: 1px solid #ccc; background-color: #1a1a1a; color: white; height: auto; display: flex; align-items: center; justify-content: center; font-family: inherit; font-size: 20px;">
-    + 10 more projects
+       style="flex: 1 1 calc(23.333% - 2em);
+              border-radius: 1em;
+              padding: 1.5em;
+              width: 320px;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              box-shadow: 0 4px 10px rgba(0,0,0,0.05);
+              transition: transform 0.3s ease, box-shadow 0.3s ease;
+              border: 1px solid #ccc;
+              background-color: #1a1a1a;
+              color: white;
+              font-family: inherit;
+              font-size: 20px;
+              text-decoration: none;
+              cursor: pointer;">
+
+    Request Recent Projects
+
   </div>
+</a>
+
 
   <style>
     .plus:hover {
