--- a/portfolio.html
+++ b/portfolio.html
@@ -201,7 +201,8 @@ body {
   }
     .plus {    
     height: 500px!important;
-    flex:100%
+    flex:100%;
+    padding: 0;
   }
 }
 
@@ -985,7 +986,7 @@ h2 {
    style="text-decoration: none; color: inherit;">
 
   <div class="plus"
-       style="flex: 1 1 calc(23.333% - 2em);
+       style="min-width: 85vw;
               border-radius: 1em;
               padding: 1.5em;
               width: 320px;
